--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
             </button>
           </div>
         </div>
-
         <div id="bottom-table-product" class="mt-16">
           <div id="Checking" class="flex flex-col justify-centers items-center">
             <div class="mb-6 w-[4.5rem] h-[4.5rem] flex items-center justify-center bg-gradient-to-t from-[#19191950] to-[#CAFF3330] rounded-full">
@@ -193,16 +192,15 @@
             <p class="text-gray70 font-light text-center">Realize your dreams with our flexible loan and mortgage options. From personal loans to home mortgages, our experienced loan officers are here to guide you through the application process and help you secure the funds you need.</p>
           </div>
         </div>
-        
       </div>
     </section>
+
     <section id="Use Cases" class="h-auto mt-20">
       <div id="ALL" class="mx-4">
         <div id="Top">
           <h2 class="text-green60 flex justify-center font-medium text-3xl mb-5">Use Cases</h2>
           <p class="text-gray70 font-light text-center">At YourBank, we cater to the diverse needs of individuals and businesses alike, offering a wide range of financial solutions</p>
         </div>
-
         <div id="Table-one" class="container mt-16 max-w-sm p-5 bg-gray11 bg-[url('/img/bg-img/bg-dots-fade-l.svg')] bg-no-repeat rounded-md h-auto text-white">
           <div id="1column" class="flex mb-3">
             <div class="flex px-4 py-5 flex-col justify-center items-center h-40 w-40 bg-gray11 border border-gray15 rounded-xl grow mr-3">
@@ -251,10 +249,7 @@
               </div>
             </div>
           </div>
-
         </div>
-
-
         <div id="For-Individuals">
           <div id="Top-individuals" class="mt-8">
             <h2 class="text-white mb-3 text-center font-medium text-2xl">For Individuals</h2>
@@ -290,7 +285,6 @@
 
           </div>
         </div>
-
         <div id="For-business">
           <div id="Table-two" class="container mt-12 max-w-sm p-5 bg-gray11 bg-[url('/img/bg-img/bg-dots-fade-l.svg')] bg-no-repeat rounded-md h-auto text-white">
             <div id="1column" class="flex mb-3">
@@ -315,7 +309,6 @@
                 </div>
               </div>
             </div>
-  
             <div id="2column" class="flex">
               <div class="flex px-4 py-5 flex-col justify-center items-center h-40 w-40 bg-gray11 border border-gray15 rounded-xl mr-3 grow">
                 <div class="flex flex-col justify-center items-center h-full">
@@ -340,7 +333,6 @@
                 </div>
               </div>
             </div>
-  
           </div>
           <div id="Top-For-Business" class="mt-8">
             <h2 class="text-white mb-3 text-center font-medium text-2xl">For Business</h2>
@@ -381,8 +373,8 @@
     </section>
 
 
-    <section id="Our features" class="h-[200rem] mt-20">
-      <div id="OurFeaturesHeader" class="text-center mx-4">
+    <section id="Our features" class="h-auto mt-20">
+      <div id="OurFeaturesHeader" class="text-center mx-5">
         <h2 class="text-white font-medium text-3xl mb-5">Our<span class="text-green60 font-medium">Features</span></h2>
         <p class="text-gray70 text-sm mt-3">
           Experience a host of powerful features at YourBank,
@@ -450,6 +442,197 @@
         </div>
       </div>
     </section>
+
+    <section id="Frequently Asked" class="h-auto mt-20 px-5">
+      <div id="Freq Header" class="mb-12 flex flex-col">
+        <div class="flex justify-center mb-2">
+          <span class="text-green60 text-center font-medium text-2xl mr-1">Frequently</span>
+          <h1 class="text-white text-center font-medium text-2xl"> Asked Questions</h1>
+        </div>
+        <p class="text-gray70 text-base font-light text-center">
+          Still you have any questions? 
+          Contact our Team via support@yourbank.com</p>
+      </div>
+      <div id="Frequently Cards" class="relative">
+        <div id="Frequently Card" class="mb-5 p-7 flex flex-col bg-gray11 border-gray15 border rounded-lg">
+          <h2 class="text-white text-xl font-medium">
+            How do I open an account with YourBank?
+          </h2>
+          <div id="row" class="my-5 bg-gray15 h-[1px]"></div>
+          <p class="text-gray70 text-base font-light">
+            Opening an account with YourBank is easy. 
+            Simply visit our website and click 
+            on the "Open an Account" button. Follow the prompts, 
+            provide the required information, and complete the application process. 
+            If you have any questions or need assistance, 
+            our customer support team is available to help.
+          </p>
+        </div>
+        <div id="Frequently Card" class="mb-5 p-7 flex flex-col bg-gray11 border-gray15 border rounded-lg">
+          <h2 class="text-white text-xl font-medium">
+            What documents do I need to 
+            provide to apply for a loan?
+          </h2>
+          <div id="row" class="my-5 bg-gray15 h-[1px]"></div>
+          <p class="text-gray70 text-base font-light">
+            The documents required for a loan application may vary depending 
+            on the type of loan you are applying for. 
+            Generally, you will need to provide identification documents 
+            (such as a passport or driver's license), proof of income 
+            (such as pay stubs or tax returns), and information about the collateral 
+            (if applicable). Our loan officers will guide you through the specific requirements 
+            during the application process.
+          </p>
+        </div>
+        <div id="Frequently Card" class="mb-5 p-7 flex flex-col bg-gray11 border-gray15 border rounded-lg">
+          <h2 class="text-white text-xl font-medium">
+            How can I access my accounts online?
+          </h2>
+          <div id="row" class="my-5 bg-gray15 h-[1px]"></div>
+          <p class="text-gray70 text-base font-light">
+            Accessing your accounts online is simple and secure. 
+            Visit our website and click on the "Login" button. Enter your username 
+            and password to access your accounts. If you haven't registered 
+            for online banking, click on the "Enroll Now" button and follow the 
+            registration process. If you need assistance, our customer support 
+            team is available to guide you.
+          </p>
+        </div>
+        <div id="Frequently Card" class="p-7 flex flex-col bg-gray11 border-gray15 border rounded-lg">
+          <h2 class="text-white text-xl font-medium">
+            Are my transactions and personal information secure?
+          </h2>
+          <div id="row" class="my-5 bg-gray15 h-[1px]"></div>
+          <p class="text-gray70 text-base font-light">
+            At YourBank, we prioritize the security of your transactions and personal 
+            information. We employ industry-leading encryption and multi-factor 
+            authentication to ensure that your data is protected. Additionally, we regularly 
+            update our security measures to stay ahead of emerging threats. 
+            You can bank with confidence knowing that we have robust 
+            security systems in place.
+          </p>
+        </div>
+        <div id="Gradient" class="bg-gradient-to-t from-gray10 scale-105 left-0 bottom-0 absolute w-full h-[20%]"></div>
+      </div>
+      <div id="FAQ" class="flex justify-center relative">
+        <div id="btn" class="w-40 h-12 flex items-center justify-center p-1 border border-gray15 bg-gray11 text-white rounded-full">
+          <a href="">Load All FAQ</a>
+          <img src="img/icons/arrow-down.svg" alt="arrow-down" class="ml-3">
+        </div>
+      </div>
+    </section>
+
+    <section id="Our Testimonials" class="h-auto mt-20 px-5">
+      <div id="Our Block">
+        <div id="Our Header">
+          <div id="Header Text" class="flex justify-center mb-4">
+            <h2 class="text-white text-center font-medium text-3xl mr-1">Our</h2>
+            <span class="text-green60 text-center font-medium text-3xl">Testimonials</span>
+          </div>
+          <p class="text-gray70 text-base font-light text-center">
+            Discover how YourBank has transformed lives with innovative digital 
+            solutions and personalized customer service. See why our clients 
+            trust us for a secure and prosperous financial journey
+          </p>
+          <div id="Button" class="px-8 mt-5">
+            <button class= "border border-gray15 p-3 flex justify-around items-center bg-gray11 rounded-full w-full h-16">
+              <a href="" class="bg-green60 h-10 w-full flex items-center justify-center rounded-full text-black font-normal">For Individuals</a>
+              <a href="" class="text-white h-10 w-full flex items-center justify-center font-medium">For Businesses</a>
+            </button>
+          </div>
+        </div>
+
+        <div id="Our Main" class="flex flex-col">
+          <div id="Our Content" class="flex flex-col p-5 mt-8 text-center relative border rounded-lg bg-gray10 border-gray15">
+            <div class="flex flex-row justify-center items-center">
+              <div class="w-full h-[1px] bg-gray15"></div>
+              <img src="img/icons/''.svg" class="px-4" alt="''">
+              <div class="w-full h-[1px] bg-gray15"></div>
+            </div>
+            <p class="text-white my-7 font-sans">
+              I recently started my own business, 
+              and YourBank has been instrumental in helping me set up my 
+              business accounts and secure the financing I needed. 
+              Their expert guidance and tailored solutions have been invaluable.
+            </p>
+            <h2 class="text-green60 font-medium">John D</h2>
+            <div id="Gradient" class="h-full w-[30%] absolute left-0 bottom-0 bg-gradient-to-r from-gray11 to-[rgba(0 , 0, 0, 0,)]"></div>
+            <div id="Gradient" class="h-full w-[30%] absolute right-0 bottom-0 bg-gradient-to-l from-gray11 to-[rgba(0 , 0, 0, 0,)]"></div>
+          </div>
+          <div id="Buttons" class="flex justify-center mt-8">
+            <a href="#" class="rounded-full p-5  mr-5 border border-gray15 bg-gray11" alt="arrow left">
+              <img src="img/icons/arrow-left.svg" alt="arrow left">
+            </a>
+            <a href="#" class="rounded-full p-5 border border-gray15 bg-gray11" alt="arrow left">
+              <img src="img/icons/arrow-right.svg" alt="arrow right">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="Start Card" class="h-auto mt-20 px-5">
+      <div id="Card" class="p-7 flex flex-col relative justify-center items-center rounded-3xl border border-gray15 bg-gray11">
+        <img src="img/bg-img/bg-dots-fade-l.svg" class="absolute left-0 top-0 w-32" alt="dots">
+        <div id="Top" class="flex flex-col text-center mb-4">
+          <h2 class="text-white text-3xl">Start your financial journey with</h2>
+          <span class="text-green60 text-3xl">YourBank today!</span>
+        </div>
+        <p class="mb-6 text-center text-gray70">
+          Lorem ipsum dolor sit amet consectetur. Blandit odio semper 
+          risus pellentesque elit. Pellentesque eget ut imperdiet nulla 
+          penatibus. Nascetur viverra arcu sed amet cursus purus.
+        </p>
+        <a id="btn" href="#" class="py-4 px-6 w-40 whitespace-nowrap rounded-full bg-green60">Open Account</a>
+      </div>
+    </section>
+
+    <footer class="h-[250rem] mt-20 px-5 bg-gray11 pt-12 pb-8">
+      <div id="Footer Nav" class="flex flex-col justify-center items-center">
+        <img src="img/logo/Logo-mobile.svg" class="w-32 mb-8" alt="Logo Bank">
+        <ul class="flex flex-row w-[300px] text-gray-200 text-sm justify-around">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Security</a></li>
+        </ul>
+      </div>
+      <div id="gray-space" class="h-[1px] bg-gray15 my-8"></div>
+      <div id="Contacts" class="flex flex-wrap whitespace-nowrap justify-center text-xs text-gray-100">
+        <div class="flex items-center mr-4">
+          <img src="img/icons/email.svg" alt="email-ico">
+          <p class="ml-2">hello@skillbirdge.com</p>
+        </div>
+        <div class="flex items-center">
+          <img src="img/icons/phone.svg" alt="phone-ico">
+          <p class="ml-2">+91 91813 23 2309</p>
+        </div>
+        <div class="flex items-center mt-3">
+          <img src="img/icons/geo-location.svg" alt="geoloc-ico">
+          <p class="ml-2">Somewhere in the World</p>
+        </div>
+      </div>
+      <div id="gray-space" class="h-[1px] bg-gray15 mt-8 mb-12"></div>
+      <div id="Down" class="flex flex-col pb-7 items-center font-light relative rounded-xl border border-gray15 bg-gray10 text-gray75">
+        <div id="Contact Buttons" class="flex translate-y-[-1.5rem]">
+          <a href="#" class="rounded-full p-3 bg-green60 mr-2">
+            <img src="img/icons/facebook.svg" alt="facebook-ico">
+          </a>
+          <a href="#" class="rounded-full p-3 bg-green60 mr-2">
+            <img src="img/icons/twitter.svg" alt="twitter-ico">
+          </a>
+          <a href="#" class="rounded-full p-3 bg-green60">
+            <img src="img/icons/linkedin.svg" alt="linkedin-ico">
+          </a>
+        </div>
+        <p class="mb-4">YourBank All Rights Reserved</p>
+          <div class="flex">
+            <p>Privacy Policy</p>
+            <div id="white-space" class="w-[1px] bg-gray-200 mx-3"></div>
+            <p>Terms of Service</p>
+          </div>
+      </div>
+    </footer>
 </main>
 
 <script>
